--- a/07-intro-to-activerecord/Rakefile
+++ b/07-intro-to-activerecord/Rakefile
@@ -8,3 +8,8 @@ task :console do
   # open Pry console, similar to binding.pry
   Pry.start
 end
+
+desc "Print a bunch of cowboys to the terminal"
+task :print_cowboys do
+  puts "🤠" * 500
+end
